cmake_minimum_required(VERSION 3.15 FATAL_ERROR)
set(PROJECT_NAMESPACE "CyA-P02-2526")
project("CyA-P02-2526"
	VERSION 1.0.0
	DESCRIPTION "CyA: Práctica 2 - Cadenas y lenguajes"
	LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
set(CMAKE_BUILD_TYPE Debug)

set(PROJECT_SHORTNAME "RT-C")
set(PROJECT_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include")

add_subdirectory("src")